# intel-fpga-afu

./: .gitignore  COPYING  Makefile  setup_afu.py
afus/: Makefile
afus/avlmm_config_afu/sw/: Makefile
afus/dma_afu/sw/: Makefile  fpga_dma.c  fpga_dma_test.c
afus/dma_afu/test_sw/: dma_afu_test.cpp  dma_memtest.cpp  dma_test_common.cpp  dma_test_common.h
afus/hello/hello_afu/: Makefile  filelist.txt
afus/hello_afu/sw/: Makefile
afus/hello_intr_afu/: Makefile
afus/nlb_400/: Makefile
afus/user_clock_test/: README
afus/user_clock_test/sw/: user_clock_test.c
avlmm_config_afu/afu/: Makefile  avlmm_config_afu.sv  ccip_std_afu.sv  hello_afu.json  mem_fsm.sv
avlmm_config_afu/sw/: Makefile  avlmm_config_afu.c
common/: Makefile  sim_common.sh
common/scripts/: regress.sh  rtl_src_config  run_app.sh  setup_sim.sh  sim_common.sh  std_run_app.sh  std_setup_sim.sh
dma_afu/: Makefile  afu.sv  avmm_ccip_host.sv  build_ipx.sh  ccip_avmm_mmio.sv  ccip_std_afu.sv  copyonly_filelist.txt  dma_afu.json  extra_tcl.txt  filelist.txt
dma_afu/BBB_cci_mpf/: release.list
dma_afu/BBB_cci_mpf/sw/: README
dma_afu/mpf/sw/: CMakeLists.txt
dma_afu/mpf/sw/include/fpga/mpf/: cci_mpf_csrs.h  csrs.h  shim_vtp.h
dma_afu/mpf/sw/src/: connect.c  mpf.cmake  shim_vc_map.c  shim_vtp_pt.h
dma_afu/qsys/: acl_dma.qsys  acl_dma_core.qsys  ccip_avmm_bridge.qsys  dma_test_system.qsys  large_sram_for_test.qsys  msgdma_bbb.qsys
dma_afu/qsys/afu_id_avmm_slave/: afu_id_avmm_slave.sv  afu_id_avmm_slave_hw.tcl
dma_afu/qsys/avst_to_avmm/: avst_to_avmm.sv  avst_to_avmm_hw.tcl
dma_afu/qsys/avst_to_avmm_master/: avst_to_avmm_master.sv  avst_to_avmm_master_hw.tcl
dma_afu/qsys/avst_to_avmm_slave/: avst_to_avmm_slave.sv  avst_to_avmm_slave_hw.tcl
dma_afu/qsys/magic_number_rom/: magic_number_rom.v  magic_number_rom_hw.tcl
dma_afu/sim/: regress.sh  run_app.sh  setup_sim.sh  sim.filelist
dma_afu/sw/: Makefile  dma_afu_test.cpp  fpga_dma.c  fpga_dma.h  fpga_dma_internal.h  fpga_dma_test.c
dma_afu/test_sw/: Makefile  RC4memtest.h  dma_afu_test.cpp  dma_bbb_speed_test.cpp  dma_memtest.cpp  dma_test_common.cpp  dma_test_common.h
hello_afu/: afu.sv  ccip_std_afu.sv  hello_afu.json
hello_afu/sim/: regress.sh  run_app.sh  setup_sim.sh  sim_common.sh
hello_afu/sw/: Makefile  hello_afu.c
hello_error_afu/: Makefile  filelist.txt
hello_error_afu/afu/: afu.sv  green_top.sv
hello_error_afu/sim/: regress.sh
hello_intr_afu/: filelist.txt
hello_intr_afu/afu/: Makefile  afu.sv  ccip_std_afu.sv  green_top.sv  hello_intr_afu.json
hello_intr_afu/afu/interfaces/: fpga_defines.vh  vendor_defines.vh
hello_intr_afu/sim/: run_app.sh  sim_common.sh
hello_intr_afu/sw/: Makefile  hello_intr_afu.c
hello_mem_afu/: filelist.txt
hello_mem_afu/afu/: Makefile  avalon_mm_pkg.sv  ccip_std_afu.sv  green_top.sv  hello_mem_afu.json  hello_mem_afu.sv  mem_csr.sv  mem_fsm.sv
hello_mem_afu/afu/interfaces/: ccip_if_pkg.sv
hello_mem_afu/sim/: regress.sh  run_app.sh  setup_sim.sh  sim_common.sh
hello_mem_afu/sw/: Makefile  hello_mem_afu.c
nlb_400/: Makefile  ccip_std_afu.sv  extra_tcl-0.txt  extra_tcl-0_stp.txt  extra_tcl-3.txt  filelist.txt  local_mem.sv  mem_if.v  nlb_400.json  nlb_400.sdc  nlb_csr.sv  nlb_lpbk.sv  nlb_lpbk_top.sv  requestor.sv  resync.v  stp2.stp  stp_basic.stp  test_lpbk1.sv  test_sw1.sv
nlb_400/QSYS_IPs/FIFO/: write_dc_fifo.ip
nlb_400/QSYS_IPs/RAM/: lpbk1_RdRspRAM2PORT.qsys  req_C1TxRAM2PORT.qsys  req_C1TxRAM2PORT.sopcinfo
nlb_400/include_files/common/: vendor_defines.vh
nlb_400/sim/: regress.sh  run_app.sh  setup_sim.sh  sim_common.sh
nlb_400/test_sw/: Makefile  simple_ddr.c
nlb_mpf_async_fifo/: nlb_mpf_async_fifo.json
nlb_mpf_async_fifo/ccip_async/hw/: ccip_async_shim.sv
nlb_mpf_async_fifo/ccip_async/qsys/: c0rx_afifo.sopcinfo  c1tx_afifo.qsys  c1tx_afifo.sopcinfo  c2tx_afifo.qsys  c2tx_afifo.sopcinfo
nlb_mpf_async_fifo/nlb_400/: ccip_std_afu.sv  requestor.sv
opencl/: Makefile
opencl/blank/: Makefile
opencl/boardtest/: Makefile  boardtest.cl
opencl/hello_world/: Makefile  hello_world.cl
opencl/mem_bandwidth/: Makefile  mem_bandwidth.cl
opencl/memspeed/: Makefile  memspeed.cl
opencl/vector_add/: Makefile  vector_add.cl
samples/: Makefile  README  common_sw.mk  sw_makefile.common
samples/avlmm_config_afu/sw/: .gitignore  Makefile
samples/bist_afu/: Makefile
samples/bist_afu/sw/: .gitignore  Makefile  bist_afu_ase.c  bist_afu_ase.h  bist_afu_ase_internal.h  bist_afu_ase_test.c
samples/bist_afu/test_sw/: Makefile
samples/dma_afu/: Makefile
samples/dma_afu/sw/: Makefile  fpga_dma.c  fpga_dma.h  fpga_dma_internal.h  fpga_dma_test.c  (+2 more)
samples/e100g_mac_afu/: Makefile
samples/e10g_mac_afu/: Makefile
samples/eth_e2e_e10/: Makefile  current_full_bbs_sim_error
samples/eth_e2e_e40/: Makefile  README
samples/hello_afu/: Makefile  README
samples/hello_error_afu/: Makefile
samples/hello_intr_afu/: Makefile  README
samples/hello_mem_afu/: Makefile  README
samples/mixed_lang_afu/: Makefile  README
samples/nlb_400/: Makefile
samples/pv_afu/: Makefile
samples/streaming_dma_afu/: Makefile  README.md
samples/user_clock_test/: Makefile  README
sgemm/: sgemm.json
sgemm/common/: gram_sdp.v  nlb_gram_sdp.v  sync_C1Tx_fifo.v
sgemm/sgemm_drop_working/: ccip_std_afu.sv
user_clock_test/: Makefile  ccip_std_afu.sv  user_clock_test.json  user_clock_test.sdc
user_clock_test/sw/: Makefile  user_clock_test.c
(+4088 files in other folders)
